# economy_service

./: .dockerignore  .gitignore  .woodpecker.yml  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  docker-compose.yml  docker-compose_shared.yml
api/: Cargo.toml
api/src/: lib.rs  middlewares.rs  openapi.rs  responses.rs
api/src/routes/: get_by_id.rs  get_self.rs  mod.rs  pay.rs
core/src/: lib.rs
crates/api/: Cargo.toml
crates/api/src/: extractors.rs  lib.rs  openapi.rs  responses.rs
crates/api/src/routes/: add_money.rs  get_by_id.rs  get_self.rs  mod.rs  pay.rs
crates/core/: Cargo.toml
crates/economy-service/: Cargo.toml
crates/economy-service/src/: main.rs
crates/entity/: Cargo.toml
crates/entity/src/: economy_state.rs
crates/migration/: Cargo.toml
crates/users-service-client/: Cargo.toml
crates/users-service-client/src/: lib.rs
economy_service/: main.py
economy_service/api/: database.py  models.py
economy_service/api/routes/: economy.py  transactions.py
entity/: Cargo.toml
entity/src/: economy_state.rs  lib.rs
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
migrations/: 20220612063556_initial.down.sql  20220612063556_initial.up.sql
src/: config.rs  main.rs  proto.rs  service.rs
src/models/: economy_state.rs  user_state.rs
users-service-client/src/: lib.rs
