[package]
name = "economy-service-api"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
poem = "1.3"
poem-openapi = { version = "2.0", features = ["swagger-ui"] }
tokio = { version = "1.21", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
envy = "0.4.2"
tracing-subscriber = "0.3"

economy-service-entity = { path = "../entity" }
economy-service-migration = { path = "../migration" }
economy-service-core = { path = "../core" }
users-service-client = { path = "../users-service-client" }
